# micro_mouse

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  claude计划.md  gpt执行记录.md  gpt计划.md  mujoco-pwm-majestic-lecun.md  pyproject.toml  requirements.txt  启动仿真.bat  控制器方案报告.md  设计思路.txt  项目维护协议.md  项目速查.md
cpp/: CMakeLists.txt
cpp/control_core/: CMakeLists.txt  control_core.cpp  lateral_controller.cpp  lateral_controller.hpp  line_sensor.cpp  line_sensor.hpp  speed_controller.cpp  speed_controller.hpp  vw_controller.cpp  vw_controller.hpp
cpp/localize_core/: CMakeLists.txt  eskf.cpp  eskf.hpp  imu_processor.cpp  imu_processor.hpp  localize_core.cpp  odometry.cpp  odometry.hpp  pipeline_localizer.cpp  pipeline_localizer.hpp  slip_detector.cpp  slip_detector.hpp  velocity_kalman.cpp  velocity_kalman.hpp
cpp/shared/: butterworth2.hpp  math_utils.hpp  types.hpp
micromouse_sim/: __init__.py
micromouse_sim/actuation/: __init__.py  delay_buffer.py  motor_model.py
micromouse_sim/config/: __init__.py  defaults.yaml  vw_controller_config.py
micromouse_sim/control/: __init__.py
micromouse_sim/environment/: __init__.py  loader.py  track.py
micromouse_sim/estimator/: __init__.py
micromouse_sim/logger/: __init__.py
micromouse_sim/physics/: __init__.py  engine.py  realism.py  tire_deformation.py
micromouse_sim/planner/: __init__.py
micromouse_sim/sensors/: __init__.py  line_sensor.py
mujoco_models/micromouse/: base.xml
presets/: 01.yaml  default.yaml
scripts/: bench_vw.py  build_cpp.bat  debug_contact.py  debug_settle.py  eval_vw.py  interactive.py  run_sim.py  test_omega_bandwidth.py  test_physics.py  test_ramp.py  test_simple.py  workbench.py
